@@ -1,10 +1,15 @@
 AUX 60-madwimax.rules.udev 1262 RMD160 15afad80a32c77215f803189d8600ecdbd4bf2aa SHA1 e1dfc5d8020cc336a13cc8c96400d66a7a4b24b6 SHA256 a6b3f936dd12d3c2a1e2b036c7671c45c1c096b9d8e7c26510a8c72ac9e21898
+AUX event.sh.generic.in.patch 2281 RMD160 9a979cfb1b8badd2b002c1710b9410253283a66d SHA1 7035d8b85b846045ca50e8c900869dda1c549ec9 SHA256 88166d70c5bab6d26d61d078e4c3b3b9eacf1cbf26c395abcabc22bf519eddfc
 AUX events.sh 1196 RMD160 d628675d11342950458b0e71f6876020de0a4189 SHA1 275bf70b1a8320c8a1118c07eccb839b9ba554b1 SHA256 04b9f49d006e9dfcac80ef78a955fe4e92aebec86d42511c9c286812bd6e44c0
 AUX madwimax-0.1.1-led.patch 763 RMD160 0633266eb8a58807b6adfcbc3343f1aded80cc49 SHA1 22ab0861ab956a2d1153bc24be79d1f8ad71a503 SHA256 997e01d10ed822431e1ef1482fcc8ca630a47dd7b46752c537c632612a126805
+AUX madwimax.conf.d 55 RMD160 a41cf1ef400823f6a54bfe224fff5b4cc7bd45f6 SHA1 2b7ed4875af2860d6037f928fd939585470aaaa9 SHA256 ab731dd120dabf6140e767b6611903422b1df91b104545c24eb2a056c26a371c
 AUX madwimax.confd 16 RMD160 fbb23e7f9b6a8b1c5160d67788cda0203c1e23d5 SHA1 aed32c131777c410146ff9b867bb8d38be2df874 SHA256 e89d031e203a4811bc2465fff637682e38d12be25f78e433cf2845c53d1cd10e
+AUX madwimax.init.d 739 RMD160 2f211e60afbc5718ab55ce4ceee9a0a1b7843059 SHA1 3b06a2f4a1479dbe625f39fa3711860b8c58418a SHA256 aa0ec38f905243a21d884ca6e4feb1ab8ad4d0022dc35df1bef94d401f6ae320
 AUX madwimax.initd 689 RMD160 988d3f348025f4d8c7b440224fd9d67bdd76ece4 SHA1 59177ac15ae45b4abd9d270070762de2d883f3aa SHA256 ff59e3ba055570eb4e320234f7de29e2fd3ee7ddfb8502c4b71d9c2cfd6815b5
+AUX z60_madwimax.rules.in.patch 1693 RMD160 c6d10715b28aa5dba83d4c48d921f48bb8f863aa SHA1 a530361e53bc81bd872d3f4e5faa348a70c79fe7 SHA256 d87766f366e0c8858068d78cb47a2d6f27e91a9097b8fe47d5118286d4b050f0
 DIST madwimax-0.1.1.tar.gz 145526 RMD160 4a3446d52041d3416b414f9d0fe12151b61a3262 SHA1 a6855bfe0d6e98518068bde7e7da3142e57c806c SHA256 17ac297934654663586df837dcff2bd6d3bbabddd76efdffa26713b07e08ad5f
 EBUILD madwimax-0.1.1-r1.ebuild 1065 RMD160 2dfc1029660830ee73fbfd512a400388e139f976 SHA1 d3d63ab97d4122d4035fcecc1ea6fc5a2bccf052 SHA256 de18db84defbed2827bb82fe3b5d4fe9ae49417f025076d73e46c3e16a32b17e
 EBUILD madwimax-0.1.1-r10.ebuild 1200 RMD160 be462df61bbb588666bd540f82dc1954a98daa15 SHA1 4696e8424ff195df73a6cdb3da2211ecabcf90fa SHA256 5c8f6971e8d5edd51ff44d064f0c13751b8a74dc4864b1e5e7e13c7887332703
-MISC ChangeLog 508 RMD160 d41668b16c394113edf68ca2206b0d73e6de049e SHA1 5d44ce9713da975cad9f0dbb6983c700b20e1d32 SHA256 11650d216e3e3484d971bcae4c9a9a87e7f46a961802d056082b2a872198a534
+EBUILD madwimax-0.1.1-r2.ebuild 1480 RMD160 f2fdfed07235531538ebc8bcd59295e979610875 SHA1 dad630713ed65cd5e0a881b6b087e9906c327fc5 SHA256 df350852926c09e1b0f66570d5bb4eb6ef2eb8665b3d1a20750f167fede9b0f4
+MISC ChangeLog 736 RMD160 db65b22292b02421091ad57562acdb704b0af095 SHA1 3b953e174bf100d78a85d935e3b204b71485d3a5 SHA256 8a3f33c4d69a502d89a49f2350d2d72018f657f4dc4cfb18f7bd1c0f43875d8d
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
