@@ -1,0 +1,3 @@
+DIODE_OFF=false
+
+EVENT_SCRIPT="/etc/madwimax/event.sh"
