@@ -1,0 +1,23 @@
+*** scripts/udev/z60_madwimax.rules.in	2009-07-04 07:54:13.000000000 +0400
+--- z60_madwimax.rules.in	2009-12-07 09:35:25.000000000 +0300
+***************
+*** 8,16 ****
+  ATTRS{idVendor}=="04e8", ATTRS{idProduct}=="6780", ATTR{bInterfaceNumber}=="01", RUN+="/bin/sh -c '/bin/echo -n $kernel > /sys/$devpath/driver/unbind'"
+  
+  # run madwimax
+! ATTR{idVendor}=="04e8", ATTR{idProduct}=="6761", RUN+="@SBINDIR@/madwimax -qd --exact-device=$attr{busnum}/$attr{devnum}"
+! ATTR{idVendor}=="04e9", ATTR{idProduct}=="6761", RUN+="@SBINDIR@/madwimax -qd --exact-device=$attr{busnum}/$attr{devnum}"
+! ATTR{idVendor}=="04e8", ATTR{idProduct}=="6731", RUN+="@SBINDIR@/madwimax -qd --exact-device=$attr{busnum}/$attr{devnum}"
+! ATTR{idVendor}=="04e8", ATTR{idProduct}=="6780", RUN+="@SBINDIR@/madwimax -qd --exact-device=$attr{busnum}/$attr{devnum}"
+  
+  LABEL="madwimax_rules_end"
+--- 8,16 ----
+  ATTRS{idVendor}=="04e8", ATTRS{idProduct}=="6780", ATTR{bInterfaceNumber}=="01", RUN+="/bin/sh -c '/bin/echo -n $kernel > /sys/$devpath/driver/unbind'"
+  
+  # run madwimax
+! ATTR{idVendor}=="04e8", ATTR{idProduct}=="6761", RUN+="/bin/bash -c 'if ! [[ $(rc-status -r) == sysinit ]] ; then /etc/init.d/madwimax restart; fi'"
+! ATTR{idVendor}=="04e9", ATTR{idProduct}=="6761", RUN+="/bin/bash -c 'if ! [[ $(rc-status -r) == sysinit ]] ; then /etc/init.d/madwimax restart; fi'"
+! ATTR{idVendor}=="04e8", ATTR{idProduct}=="6731", RUN+="/bin/bash -c 'if ! [[ $(rc-status -r) == sysinit ]] ; then /etc/init.d/madwimax restart; fi'"
+! ATTR{idVendor}=="04e8", ATTR{idProduct}=="6780", RUN+="/bin/bash -c 'if ! [[ $(rc-status -r) == sysinit ]] ; then /etc/init.d/madwimax restart; fi'"
+  
+  LABEL="madwimax_rules_end"
