@@ -1,6 +1,12 @@
 # ChangeLog for net-wireless/madwimax
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  13 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  +madwimax-0.1.1-r2.ebuild, +files/event.sh.generic.in.patch,
+  +files/madwimax.conf.d, +files/madwimax.init.d,
+  +files/z60_madwimax.rules.in.patch:
+  add new init support
 
   27 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   +files/60-madwimax.rules.udev, +madwimax-0.1.1-r10.ebuild, 
